# mlFramework

./: README.md  buffer.py  et HEAD~1  forward_backward.py  functions.py  memory.py  mlops.py  ops.py  pyproject.toml  ruff.toml  shape.py  tensor.py  tensor_buffer.py  test.py  test_ops.py  test_tensor.py  testing.py  testing2.py
__pycache__/: .tensor.cpython-310.pyc.swp  .tensor.cpython-310_BASE_15830.pyc.swp  .tensor.cpython-310_LOCAL_15830.pyc.swp  .tensor.cpython-310_REMOTE_15830.pyc.swp
examples/: mnist.py
mlf/: buffer.py  functions.py  layers.py  tensor.py  test_layers.py
mlf/other/: buffer.py  layers.py  memory.py  ops.py  shape.py
other/: buffer.py
test/: test_ops.py  test_tensor.py
